tests/index_tests/errors/src/Parse.php
<?php
namespace Example;

class ParseError;
